--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,14 +5,11 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                Header
+                Bienvenido
             </div>
             <div class="card-body">
                 <h4 class="card-title">Title</h4>
                 <p class="card-text">Text</p>
-            </div>
-            <div class="card-footer text-muted">
-                Footer
             </div>
         </div>
     </div>
