--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,13 +4,14 @@
     </div>
 
     <div class="sidebar-header">
-        <h3>COLFEAR</h3>
+        <h3>{{session.get('usua_nombre')}}</h3>
+        <h4>ROL: {{ session.get('usua_rold') }}</h4>
     </div>
 
     <ul class="list-unstyled components">
         <p>MENÚ</p>
         <li>
-            <a href="#">Inicio</a>
+            <a href="">Inicio</a>
         </li>
         
     </ul>
