--- a/templates/master.html
+++ b/templates/master.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Sistema de registro de inventario" />
-    <link rel="shortcut icon" href="static/img/boxes-solid.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="static/img/graduation-cap-solid.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="static/style3.css">
     <title>{% block title %}{% endblock %}</title>
     <style>
       body {
-        background-image: url('static/img/fondo.jpg');
+        background-image: url('static/img/fondo-min.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
