modificacion de modulo de cambio de contrasena

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -11,7 +11,7 @@
     <ul class="list-unstyled components">
         <p>MENÚ</p>
         <li>
-            <a href="">Inicio</a>
+            <a href="principal">Inicio</a>
         </li>
         
     </ul>
