--- a/static/style3.css
+++ b/static/style3.css
@@ -57,7 +57,7 @@ a:focus {
     left: -250px;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    background: #18bc9c;
     color: #fff;
     transition: all 0.3s;
     overflow-y: scroll;
@@ -73,7 +73,7 @@ a:focus {
     height: 35px;
     line-height: 35px;
     text-align: center;
-    background: #7386D5;
+    background: #18bc9c;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -85,7 +85,7 @@ a:focus {
 
 #dismiss:hover {
     background: #fff;
-    color: #7386D5;
+    color: #18bc9c;
 }
 
 .overlay {
@@ -105,7 +105,7 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #18bc9c;
 }
 
 #sidebar ul.components {
@@ -125,14 +125,14 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #18bc9c;
     background: #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: #18bc9c;
 }
 
 a[data-toggle="collapse"] {
@@ -150,7 +150,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #18bc9c;
 }
 
 ul.CTAs {
@@ -167,12 +167,12 @@ ul.CTAs a {
 
 a.download {
     background: #fff;
-    color: #7386D5;
+    color: #18bc9c;
 }
 
 a.article,
 a.article:hover {
-    background: #6d7fcc !important;
+    background: #18bc9c !important;
     color: #fff !important;
 }
 
