--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
 
         <button type="button" id="sidebarCollapse" class="btn btn-info">
@@ -11,6 +11,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="cambio_password"><i class="fas fa-lock"></i> Cambiar Contraseña</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="cerrar_sesion"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a>
                 </li>
