--- a/templates/master.html
+++ b/templates/master.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Sistema de registro de inventario" />
     <link rel="shortcut icon" href="static/img/graduation-cap-solid.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/minty/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="static/style3.css">
     <title>{% block title %}{% endblock %}</title>
@@ -73,6 +73,9 @@
             });
         });
     </script>
+    {% block javascript %}
+        
+    {% endblock %}
 </body>
 
 </html>
