--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,11 +5,10 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                Bienvenido
+                Bienvenido {{ session.get('usua_nombre') }}
             </div>
             <div class="card-body">
-                <h4 class="card-title">Title</h4>
-                <p class="card-text">Text</p>
+                
             </div>
         </div>
     </div>
