Modificacion del sistema en su totalidad

--- a/templates/cambioPassword.html
+++ b/templates/cambioPassword.html
@@ -8,38 +8,40 @@
                 Módulo de Cambio de Contraseña
             </div>
             <div class="card-body">
-                <form action="procesar_cambio_password" method="POST">
+                <form id="frmCambioPassword">
                     <div class="row">
                         <div class="col-md-6 offset-md-3">
                             <div class="form-group">
-                              <label for="txtPasswordActual">Contraseña Actual</label>
-                              <input type="password"
-                                class="form-control" name="txtPasswordActual" id="txtPasswordActual" placeholder="Ingrese su contraseña actual">
+                                <label for="txtPasswordActual">Contraseña Actual</label>
+                                <input type="password" class="form-control" name="txtPasswordActual"
+                                    id="txtPasswordActual" placeholder="Ingrese su contraseña actual">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 offset-md-3">
                             <div class="form-group">
-                              <label for="txtPasswordNueva">Contraseña Nueva</label>
-                              <input type="password"
-                                class="form-control" name="txtPasswordNueva" id="txtPasswordNueva" placeholder="Ingrese su contraseña nueva">
+                                <label for="txtPasswordNueva">Contraseña Nueva</label>
+                                <input type="password" class="form-control" name="txtPasswordNueva"
+                                    id="txtPasswordNueva" placeholder="Ingrese su contraseña nueva">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 offset-md-3">
                             <div class="form-group">
-                              <label for="txtPasswordConfirmacion">Contraseña Confirmación</label>
-                              <input type="password"
-                                class="form-control" name="txtPasswordConfirmacion" id="txtPasswordConfirmacion" placeholder="Ingrese su contraseña nueva una vez mas">
+                                <label for="txtPasswordConfirmacion">Contraseña Confirmación</label>
+                                <input type="password" class="form-control" name="txtPasswordConfirmacion"
+                                    id="txtPasswordConfirmacion" placeholder="Ingrese su contraseña nueva una vez mas">
                             </div>
                         </div>
                     </div>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     <div class="row">
                         <div class="col-md-6 offset-md-3">
                             <div class="form-group">
-                              <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-unlock"></i> Cambiar Contraseña</button>
+                                <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-unlock"></i>
+                                    Cambiar Contraseña</button>
                             </div>
                         </div>
                     </div>
@@ -50,11 +52,47 @@
 </div>
 {% endblock %}
 {% block javascript %}
-    <script>
-        $("#frmCambioPassword").submit(function(event){
-            event.preventDefault();
-            var formDatos = $(this).serialize();
-            
-        });
-    </script>
+<script>
+    $("#frmCambioPassword").submit(function (event) {
+        event.preventDefault();
+        var formDatos = $(this).serialize();
+        $.ajax({
+            url: baseUrl + '/procesar_cambio_password',
+            type: 'POST',
+            data: formDatos
+        })
+            .done(function (data) {
+                var r = data;
+                var h = "<ul>";
+
+                if (r != "correcto" && r != "incorrecto") {
+                    for (var i = 0; i < r.length; i++) {
+                        h+='<li>'+r[i][1][0]+'</li>';
+                    }
+                    h += "</ul>";
+                    Swal.fire({
+                        icon: 'warning',
+                        title: 'Atención!',
+                        html: h,
+                      });
+                } else {
+                    if (r == "correcto") {
+                        Swal.fire(
+                            'Correcto!',
+                            'Se ha realizado el cambio de contraseña correctamente!',
+                            'success'
+                        )
+                    }
+                    if (r == "incorrecto") {
+                        Swal.fire(
+                            'Atención!',
+                            'La contraseña actual ingresada no es correcta',
+                            'warning'
+                        )
+                    }
+                }
+            });
+
+    });
+</script>
 {% endblock %}
