--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <title>{{titulo}}</title>
     <style>
         body {
-            background-image: url('static/img/fondo-min.jpg');
+            background-image: url('static/img/fondo.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
