modificaciones de la base de datos

--- a/templates/login.html
+++ b/templates/login.html
@@ -82,6 +82,7 @@
                                         <select class="form-control" name="sltRol" id="sltRol">
                                             <option value="1">ALUMNO</option>
                                             <option value="2">PROFESOR</option>
+                                            <option value="3">ADMINISTRADOR</option>
                                         </select>
                                     </div>
                                 </div>
