--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
 
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
+        <button type="button" id="sidebarCollapse" class="btn btn-primary">
             <i class="fas fa-bars"></i>
             <span>Menú</span>
         </button>
