--- a/templates/login.html
+++ b/templates/login.html
@@ -6,37 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Sistema de registro de inventario" />
-    <link rel="shortcut icon" href="static/img/graduation-cap-solid.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/minty/bootstrap.min.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='graduation-cap-solid.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <title>{{titulo}}</title>
     <style>
-        body {
-            background-image: url('static/img/fondo.jpg');
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
+        html,body{
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
         }
-
-        .container {
-            padding-top: 100px;
+        .contenedor{
+            height: auto;
+            width: 100%;
         }
+        .izquierda{
+            background-color: rgb(30, 46, 80);
+            position:absolute;
+            top: 0;
+            bottom: 0;
+            width: 50%;
+        }
+        .derecha{
+            background-color: #E9F4FF;
+            position:absolute;
+            top:0;
+            left:50%;
+            bottom:0;
+            width: 50%;
+        }
+        #formulario{
+            padding-top: 15%;
+        }
+        #frase{
+            padding-top: 30%;
+        }
+        @media only screen and (max-width: 600px) {
+            .izquierda{
+                display: none;
+            }
+            .derecha{
+                width: 100%;
+                left:0;
+            }
+          }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card text-left">
-                    <!-- <img class="card-img-top" src="" alt=""> -->
-                    <div class="card-body">
-                        <h4 class="card-title text-center"><i class="fas fa-graduation-cap fa-3x"></i> <br>SISTEMA DE CONTROL DE
-                            CALIFICACIONES
-                        </h4>
-                        <h5 class="text-center">COLFEAR</h5>
-                        {% if error %}
+    <div class="contenedor">
+        <div class="izquierda">
+            <div class="align-items-center" id="frase">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2 text-left" style="color:white">
+                        <h1>"La educación es el arma más poderosa que puedes usar para cambiar al mundo."</h1>
+                        <legend>NELSON MANDELA</legend>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="derecha">
+            <div class="align-items-center" id="formulario">
+                <div class="">
+                    <div class="col-md-6 offset-md-3 text-center">
+                        <i class="fas fa-graduation-cap fa-3x"></i><br> <span style="font-size: 30px;">SISTEMA DE CONTROL DE
+                            ACADÉMICO</span>
+                            <h3>Ingrese sus credenciales</h3>
+                            {% if error %}
                         <div class="alert alert-warning alert-dismissible fade show" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -63,15 +101,15 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="number" class="form-control" name="txtUsuario" id="txtUsuario"
-                                            placeholder="Ingrese su cédula" autofocus>
+                                        <input type="number" class="form-control form-control-lg" name="txtUsuario" id="txtUsuario"
+                                            placeholder="Ingrese su cédula" autocomplete="off" autofocus>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="password" class="form-control" name="txtPassword" id="txtPassword"
+                                        <input type="password" class="form-control form-control-lg" name="txtPassword" id="txtPassword"
                                             placeholder="Ingrese su Contraseña">
                                     </div>
                                 </div>
@@ -79,7 +117,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <select class="form-control" name="sltRol" id="sltRol">
+                                        <select class="form-control form-control-lg" name="sltRol" id="sltRol">
                                             <option value="1">ALUMNO</option>
                                             <option value="2">PROFESOR</option>
                                             <option value="3">ADMINISTRADOR</option>
@@ -91,7 +129,7 @@
                             <div class="row">
                                 <div class="col-md-12 text-right">
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>
+                                        <button type="submit" class="btn btn-primary btn-lg btn-block"><i class="fas fa-sign-in-alt"></i>
                                             Ingresar al sistema</button>
                                     </div>
                                 </div>
