--- a/templates/master.html
+++ b/templates/master.html
@@ -12,19 +12,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">  
   <meta name="Description" content="Sistema de registro de inventario" />
-  <link rel="shortcut icon" href="static/img/graduation-cap-solid.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/minty/bootstrap.min.css">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='graduation-cap-solid.ico') }}" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/cosmo/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-  <link rel="stylesheet" href="static/style3.css">
+  <link rel="stylesheet" href="static/style.css">
   <title>{% block title %}{% endblock %}</title>
   <style>
-    body {
-      background-image: url('static/img/fondo.jpg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
+    body{
+      background-color: #E9F4FF;
     }
   </style>
 </head>
