--- a/templates/principal.html
+++ b/templates/principal.html
@@ -2,42 +2,51 @@
 {% block title%}{{titulo}}{% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                Bienvenido {{ session.get('usua_nombre') }}
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        Bienvenido {{ session.get('usua_nombre') }}
+      </div>
+      <div class="card-body">
+        <div class="row">
+          {% if session.get('usua_rol')==3 %}
+          <div class="col-md-3">
+            <div class="form-group">
+              <a href="{{ url_for('registrarPersona') }}"><button type="button"
+                class="btn btn-primary btn-block"><i class="fas fa-user-plus fa-5x"></i><br>
+                Registrar Persona</button></a>
+              </div>
             </div>
-            <div class="card-body">
-                {% if session.get('usua_rol')==3 %}
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <a href="{{ url_for('registrarPersona') }}"><button type="button" class="btn btn-primary btn-block"><i class="fas fa-user-plus fa-5x"></i><br> Registrar Persona</button></a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <a href="{{ url_for('listadoPersonas') }}"><button type="button" class="btn btn-primary btn-block"><i class="fas fa-th-list fa-5x"></i><br> Listar Personas</button></a>
-                        </div>
-                    </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <a href="{{ url_for('listadoPersonas') }}"><button type="button"
+                  class="btn btn-primary btn-block"><i class="fas fa-th-list fa-5x"></i><br> Listar
+                  Personas</button></a>
+                </div>
+              </div>
+
+              {% endif %}
+              {% if session.get('usua_rol')==2 or session.get('usua_rol')==3 %}
+              <div class="col-md-3">
+                <div class="form-group">
+                  <a href="{{ url_for('registrar_notas') }}"><button type="button"
+                    class="btn btn-primary btn-block"><i class="fas fa-book-open fa-5x"></i><br>
+                    Registrar Notas</button></a>
+                  </div>
                 </div>
                 {% endif %}
-                {% if session.get('usua_rol')==2 or session.get('usua_rol')==3 %}
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <a href="{{ url_for('registrar_notas') }}"><button type="button" class="btn btn-primary btn-block"><i class="fas fa-book-open fa-5x"></i><br> Registrar Notas</button></a>
-                        </div>
+                {% if session.get('usua_rol')==1 %}
+                <div class="col-md-3">
+                  <div class="form-group">
+                    <a href="{{ url_for('visualizar_notas') }}"><button type="button"
+                      class="btn btn-primary btn-block"><i class="fas fa-book-open fa-5x"></i><br>
+                      Ver Notas</button></a>
                     </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <a href="{{ url_for('modificar_notas') }}"><button type="button" class="btn btn-primary btn-block"><i class="fas fa-user-edit fa-5x"></i><br> Modificar Notas</button></a>
-                        </div>
-                    </div>
-                </div>
-                {% endif %}
+                  </div>
+                  {% endif %}
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</div>
-{% endblock %}
+      </div>
+      {% endblock %}
